--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "browserslist":[
+  "browserslist": [
     "last 1 Edge version",
     "last 1 Chrome version",
     "last 1 Firefox version"
@@ -21,6 +21,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.4.0",
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
